Update to the Categorical Modeling Module

--- a/Modules/Intro to Categorical Model-Making Module by Austin Hayes/Intro to Categorical Model-Making Module by Austin Hayes.ipynb
+++ b/Modules/Intro to Categorical Model-Making Module by Austin Hayes/Intro to Categorical Model-Making Module by Austin Hayes.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "Visit the original data page here: https://www.basketball-reference.com/wnba/years/2024.html\n",
     "\n",
-    "The data set contains 13 rows and 25 columns. Each row represents a WNBA team during the 2024 season. Meaning, the new expansion teams will not be included in this data.\n",
+    "The data set contains 13 rows and 25 columns. Each row represents a WNBA team during the 2024 season.\n",
     "\n",
     "Download data: \n",
     "\n",
@@ -163,63 +163,50 @@
    "source": [
     "---\n",
     "\n",
-    "# Modeling Process\n",
-    "\n"
+    "# Modeling Process For This Module\n",
+    "\n",
+    "In order to build a model, we will need to train the model and then test the model to see how accurate it is. Normally, we would want to build the model by splitting a season's worth of data into a train dataset and a test dataset. Usually, you want to split the data into a higher ratio of training data than test data. This ensures that the model will be more adequately prepared to make predicitions on the test data. On the flip side, there needs to be a balance between your train and test sets because the more test data you have, the more data you have to test your models accuracy. Normally, I use 60-70% of the data for training the model and 40-30% for testing the model.\n",
+    "\n",
+    "However, we will want to do something a little different in this module. In order to test the accuracy of the model(s) amongst one another, we want to train the model(s) on the previous 2 season's worth of data. Since this is a special case (only one 'champion' and NOT multiple) we will train the model(s) using 2023 season data and test it with the 2024 season data. The model with the highest accuracy, or of our choosing, will be used to predict who the WNBA champion will be this season using the 'Per Game' stats thus far.\n",
+    "\n",
+    "# Importing data and making train/test sets\n",
+    "\n",
+    "Let's get started by reading in the data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "96543b02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read in the WNBA 2023 data from Github \n",
+    "# This dataset will be used to train the model\n",
+    "TRAIN_WNBA_2023_Data = pd.read_csv('https://raw.githubusercontent.com/schuckers/Charlotte_SCORE_Summer25/refs/heads/main/Data%20for%20Modules/Data%20For%20Intro%20to%20Categorical%20Model-Making%20Module%20by%20Austin%20Hayes/2023_WNBA_Per_Game.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ff992282",
    "metadata": {},
    "outputs": [],
    "source": [
-    "WNBA_2024_Data = pd.read_csv('https://raw.githubusercontent.com/schuckers/Charlotte_SCORE_Summer25/refs/heads/main/Data%20for%20Modules/Data%20For%20Intro%20to%20Categorical%20Model-Making%20Module%20by%20Austin%20Hayes/2024_WNBA_Per_Game.csv')"
+    "# Read in the WNBA 2024 data from Github \n",
+    "# This dataset will be used to test the model\n",
+    "TEST_WNBA_2024_Data = pd.read_csv('https://raw.githubusercontent.com/schuckers/Charlotte_SCORE_Summer25/refs/heads/main/Data%20for%20Modules/Data%20For%20Intro%20to%20Categorical%20Model-Making%20Module%20by%20Austin%20Hayes/2024_WNBA_Per_Game.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "bddd3f54",
+   "execution_count": null,
+   "id": "e549ecb7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Rk', 'Team', 'G', 'MP', 'FG', 'FGA', 'FG%', '3P', '3PA', '3P%', '2P',\n",
-       "       '2PA', '2P%', 'FT', 'FTA', 'FT%', 'ORB', 'DRB', 'TRB', 'AST', 'STL',\n",
-       "       'BLK', 'TOV', 'PF', 'PTS'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "WNBA_2024_Data.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "96d7032e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(13, 25)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "WNBA_2024_Data.shape"
+    "# Read in the current WNBA 2025 stats for our model prediction later on in this module\n",
+    "CURRENT_WNBA_2025_Data = pd.read_csv('https://raw.githubusercontent.com/schuckers/Charlotte_SCORE_Summer25/refs/heads/main/Data%20for%20Modules/Data%20For%20Intro%20to%20Categorical%20Model-Making%20Module%20by%20Austin%20Hayes/2025_WNBA_Per_Game.csv')"
    ]
   },
   {
