--- a/Modules/Intro to Categorical Model-Making Module by Austin Hayes/Intro to Categorical Model-Making Module by Austin Hayes.ipynb
+++ b/Modules/Intro to Categorical Model-Making Module by Austin Hayes/Intro to Categorical Model-Making Module by Austin Hayes.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2f6a3b23",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "96543b02",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ff992282",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e549ecb7",
    "metadata": {},
    "outputs": [],
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "de2392e1",
    "metadata": {},
    "outputs": [],
@@ -2020,7 +2020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "35281cc5",
    "metadata": {},
    "outputs": [],
@@ -2042,7 +2042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "32902ef0",
    "metadata": {},
    "outputs": [],
@@ -2933,7 +2933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "a0330fb0",
    "metadata": {},
    "outputs": [],
@@ -3832,12 +3832,20 @@
     "\n",
     "# Logistic Regression\n",
     "\n",
-    "Logistic Regression is a categorical model that uses probabilities to predict a binary outcome. It assumes a linear relationship between independent variables. Let's go ahead and eastblish a logistic mdoel and train it with the 2023 data."
+    "Logistic Regression is a categorical model that uses probabilities to predict a binary outcome. It assumes a linear relationship between independent variables. Let's go ahead and eastblish a logistic model and train it with the 2023 data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5767df82",
+   "metadata": {},
+   "source": [
+    "We will train it ONLY using the neccesary stats. The model also needs to be trained using integer values, so let's keep it simple by predicting the champion based on the following stats: FG, FGA, 3P, 3PA, 2P, 2PA, FT, FTA, ORB, DRB, TRB, AST, STL, BLK, TOV, PF, PTS. The definitions of these variables can be found at the top of this module. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8780af3f",
    "metadata": {},
    "outputs": [],
@@ -3845,7 +3853,8 @@
     "# Create the logistic regression model\n",
     "logistic_model = LogisticRegression()\n",
     "\n",
-    "# Train the model using the 2023 WNBA data"
+    "# Train the model using the 2023 WNBA data\n",
+    "logistic_model.fit(TRAIN_WNBA_2023_Data[['FG', 'FGA', '3P', '3PA', '2P', '2PA', 'FT', 'FTA', 'ORB', 'DRB', 'TRB', 'AST', 'STL', 'BLK', 'TOV', 'PF', 'PTS']], TRAIN_WNBA_2023_Data['Champion'])"
    ]
   }
  ],
