M. Schuckers comments 11 Aug 25

--- a/Modules/Analyzing Medal Distribution in Olympic Wrestling by Izaan Khudadad/InequalityMedalSCORE.ipynb
+++ b/Modules/Analyzing Medal Distribution in Olympic Wrestling by Izaan Khudadad/InequalityMedalSCORE.ipynb
@@ -2,6 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ea7c1273",
+   "metadata": {},
+   "source": [
+    "Comments M. Schuckers 11 Aug 25\n",
+    "- Give the equation for the Gini Index and a couple of simple examples of calculation of values from the index.\n",
+    "- Check the 0.55 number you give for wrestling\n",
+    "- Let's add a bar chart of medals by country so we have a visual of that distribution before we calculate the gini coefficient.\n",
+    "- Add a paragraph about the heatmap before the code.  Start by motivating that discussion by wanting to see how things have changed over time.  \n",
+    "- Maybe have a comparison of Lorenz Curves over time.  Does the Lorenz Curve from 1902 to 1972 look the same as from 1976 to 2020?  (Or maybe some other relevant breakdown of years)\n",
+    "- How about a question/task about the distribution of gold medals and the gini index for that variable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fe4f38ce",
    "metadata": {},
    "source": [
@@ -121,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5110cdf0",
    "metadata": {},
    "outputs": [
@@ -179,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "90d8e7d7",
    "metadata": {},
    "outputs": [],
@@ -214,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "95804fba",
    "metadata": {},
    "outputs": [
@@ -335,8 +349,8 @@
    "id": "2ae45049",
    "metadata": {},
    "source": [
-    "- The dashed diagonal line (“Perfect equality”) is the scenario where every country has won the same share of medals. For example, if 50% of countries had 50% of the medals, the curve would be perfectly diagonal.\n",
-    "- The blue Lorenz curve shows the actual distribution of medals. The more it bows away from the diagonal, the more unequal the medal distribution is.\n",
+    "- The dashed diagonal line (“Perfect equality”) is the scenario where every country has won the same share of medals. For example, if each country had won 2 medals, the curve would be perfectly diagonal.\n",
+    "- The blue Lorenz curve shows the actual cumulative distribution of medals. The more it bows away from the diagonal, the more unequal the medal distribution is.\n",
     "- In this chart, the blue curve bows strongly downward, meaning a small number of countries have won most of the medals, while the majority have won very few or none.\n",
     "- For example, from the shape of this curve, it’s likely that the top ~20% of countries have earned well over 70% of all freestyle wrestling medals in Olympic history."
    ]
@@ -409,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
