--- a/Modules/Into to Regression Trees with Climb data by Izaan Khudadad/RegressionTreeSCORE.ipynb
+++ b/Modules/Into to Regression Trees with Climb data by Izaan Khudadad/RegressionTreeSCORE.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "35b7a90d",
+   "metadata": {},
+   "source": [
+    "Comments from M. Schuckers 11 August 25\n",
+    "- Add some comments to the code block that starts with \"Visualizing the tree\"\n",
+    "- Add some examples to help users understand a regression tree.\n",
+    "- Is each row a single attempt or a single climber?  I'm not sure from the data description\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a714aa71",
    "metadata": {},
    "source": [
@@ -231,7 +243,7 @@
    "id": "392190ce",
    "metadata": {},
    "source": [
-    "`X` is the input data (also called features or predictors).\n",
+    "In the code below, `X` is the input data (also called features or predictors).\n",
     "\n",
     "Here, we’re using just two columns: `age` and `years_cl` (years climbing), which we think might help predict how good a climber is.\n",
     "\n",
@@ -258,11 +270,11 @@
    "source": [
     "`DecisionTreeRegressor(...)` This creates a regression tree model\n",
     "\n",
-    "`max_depth=2` This limits the tree to only 2 levels deep.\n",
+    "`max_depth=2` This limits the tree to only 2 levels deep.  That is, there are only two branches or splits to the data.\n",
     "\n",
     "`random_state=42` This is just a seed value to make sure results are reproducible (you get the same results every time you run it). The number 42 is arbitrary - any number would work.\n",
     "\n",
-    "`.fit(X, y)` This is where the model learns from the data."
+    "`.fit(X, y)` This tells Python to fit the model to the data."
    ]
   },
   {
@@ -711,13 +723,7 @@
    "id": "7fbd8e6b",
    "metadata": {},
    "source": [
-    "Each box in the tree is a decision step. The model starts at the top and works its way down by asking yes/no questions about the climber’s attributes.\n",
-    "\n",
-    "Each box shows:\n",
-    "\n",
-    "- squared_error: how much error is in the predictions at that point.\n",
-    "- samples: how many climbers fall into that group.\n",
-    "- value: the predicted average peak grade for that group."
+    "Next we are going to provide some code for visualizing our regression tree."
    ]
   },
   {
@@ -747,6 +753,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3e406934",
+   "metadata": {},
+   "source": [
+    "Each box in the tree is a decision step. The model starts at the top and works its way down by asking yes/no questions about the climber’s attributes.\n",
+    "\n",
+    "Each box shows:\n",
+    "\n",
+    "- squared_error: how much error is in the predictions at that point.\n",
+    "- samples: how many climbers fall into that group.\n",
+    "- value: the predicted average peak grade for that group."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eff4b34c",
    "metadata": {},
    "source": [
@@ -768,6 +788,20 @@
     "        - Climbers with more than 17.5 years of experience have the highest average peak grade (58.647). \n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd5bfd77",
+   "metadata": {},
+   "source": [
+    "ZZZ Add some examples here for prediction.\n",
+    "\n",
+    "Climber 1 has 15 years experience and is age 35, what is their predict peak grade\n",
+    "\n",
+    "Climber 2 has 10 years experience and is age 35\n",
+    "\n",
+    "Climber 3 has 20 years experience and is 47 years old, "
    ]
   },
   {
@@ -794,7 +828,7 @@
     "\n",
     "2. Interpret the results. \n",
     "\n",
-    "3. Add another predictor of your choice, change the `max_depth` from 2 to 4. How does the structure of the tree change?"
+    "3. Add another predictor of your choice to the model you made in activity 1, change the `max_depth` from 2 to 4. How does the structure of the tree change?"
    ]
   }
  ],
