Schuckers Comments 11 Aug 25

--- a/Modules/Intro to Data Cleaning and Imputation by Austin Hayes/Intro to Data Cleaning and Imputation by Austin Hayes.ipynb
+++ b/Modules/Intro to Data Cleaning and Imputation by Austin Hayes/Intro to Data Cleaning and Imputation by Austin Hayes.ipynb
@@ -2,6 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "dc842a9b",
+   "metadata": {},
+   "source": [
+    "M. Schuckers Comments 11 Aug 2025\n",
+    "- I broke the first markdown cell into three separate cells.  Have a look a verify I did okay.\n",
+    "- I've also toned down a bit of the commentary.\n",
+    "- Explain this code 'combine_data[combine_data.isnull().any(axis=1)]' a bit more \n",
+    "- Explain this code 'missing_combine_data[missing_combine_data[['forty','vertical','bench_reps','broad_jump','three_cone','shuttle']].isna().sum(axis=1) >= 4]' a bit more\n",
+    "- I must admit this module makes me a bit queasy since we are advocating doing something (imputation with a mean) that I would never do to analyze these data.\n",
+    "- Okay now that I see the linear regression part I feel better but we should not that the assumption of MAR is likely not met with these data but we can illustrate the missingness with it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0dd9b764",
    "metadata": {},
    "source": [
@@ -28,7 +42,14 @@
     "  - Pandas\n",
     "  - Data Imputation\n",
     "\n",
-    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdc4915b",
+   "metadata": {},
+   "source": [
     "### Data\n",
     "\n",
     "This Dataset is from the SCORE Network Data Repository. The authors include: Shane Hauk, Michael Schuckers and Robin Lock\n",
@@ -39,9 +60,14 @@
     "\n",
     "Download data: \n",
     "\n",
-    "Available on the [Intro to Data Cleaning and Imputation by Austin Hayes](https://github.com/schuckers/Charlotte_SCORE_Summer25/tree/main/Data%20for%20Modules/Data%20for%20Intro%20to%20Data%20Cleaning%20and%20Imputation%20by%20Austin%20Hayes): [epl_player_stats_24_25.csv](https://raw.githubusercontent.com/schuckers/Charlotte_SCORE_Summer25/refs/heads/main/Data%20for%20Modules/Data%20for%20Intro%20to%20Data%20Cleaning%20and%20Imputation%20by%20Austin%20Hayes/nfl_combine.csv)\n",
-    "\n",
-    "---\n",
+    "Available on the [Intro to Data Cleaning and Imputation by Austin Hayes](https://github.com/schuckers/Charlotte_SCORE_Summer25/tree/main/Data%20for%20Modules/Data%20for%20Intro%20to%20Data%20Cleaning%20and%20Imputation%20by%20Austin%20Hayes): [epl_player_stats_24_25.csv](https://raw.githubusercontent.com/schuckers/Charlotte_SCORE_Summer25/refs/heads/main/Data%20for%20Modules/Data%20for%20Intro%20to%20Data%20Cleaning%20and%20Imputation%20by%20Austin%20Hayes/nfl_combine.csv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fea794c",
+   "metadata": {},
+   "source": [
     "\n",
     "### Variables and their Descriptions:\n",
     "\n",
@@ -87,7 +113,7 @@
     "\n",
     "# Data Cleaning and the \"Three C's\"\n",
     "\n",
-    "Data cleaning is an essential part of data science and sports analytics. Most of the time, you need to clean up the dataset before using it because it won't always be in a correct or readable format. This brings us to the \"three C's\". This is a very important aspect of data science that provides basic guidance on what to look for when undergoing the data cleaning process. \n",
+    "Data preparation is an essential part of data science. Most of the time, you need to clean up the dataset before using it because it won't always be in a correct or readable format. This brings us to the \"three C's\". This is a very important aspect of data science that provides basic guidance on what to look for when undergoing the data cleaning process. \n",
     "\n",
     "The three C's stand for:\n",
     "- Consistent\n",
@@ -422,7 +448,7 @@
    "id": "73d0d4a7",
    "metadata": {},
    "source": [
-    "Before we start deciding what to do with these missing values, let's start by checking the consistentcy. Let's check the datatypes for column and make sure that they align with their values."
+    "Before we start deciding what to do with these missing values, let's start by checking the consistency. Let's check the datatypes for column and make sure that they align with their values."
    ]
   },
   {
@@ -463,7 +489,7 @@
    "id": "e6c1ebfb",
    "metadata": {},
    "source": [
-    "Nice! looks like we don't need to change any of the datatypes for this dataset."
+    "Nice! It looks like we don't need to change any of the datatypes for this dataset."
    ]
   },
   {
@@ -1804,7 +1830,7 @@
    "id": "1bc7f4db",
    "metadata": {},
    "source": [
-    "This is a massive dataset with over 6000 rows so it may be best to examine it using .describe() from the Pandas library. This will allow us to see statistical information about each column, which will tell us if there are any alarming outliers."
+    "This is a good sized dataset with over 6000 rows so it may be best to examine it using .describe() from the Pandas library. This will allow us to see statistical information about each column, which will tell us if there are any alarming outliers."
    ]
   },
   {
@@ -2096,7 +2122,7 @@
    "id": "421caf7a",
    "metadata": {},
    "source": [
-    "This looks very good; none of the max/min times seem unrealistic. The only number that stands out to me is the bench rep max of 49 reps. This means that somebody holds the record for 49 reps of 225 bench; that's insane! \n",
+    "This looks very good; none of the max/min times seem unrealistic. The only number that stands out to me is the bench rep max of 49 reps. This means that somebody holds the record for 49 reps of 225 bench; that's impressive! \n",
     "\n",
     "FUN FACT: Stephen Paea is the player who had those 49 bench reps at the combine. He was a DT out of Oregan State and was drafted 53rd overall to the Chicago Bears in 2011."
    ]
@@ -2132,9 +2158,9 @@
    "source": [
     "# Completeness\n",
     "\n",
-    "Building upon the previous sections, there are severl ways to approach this issue but let's start by asking: Why is the data missing? If it was intentionally done, why? \n",
+    "Building upon the previous sections, there are several ways to approach this issue but let's start by asking: Why is the data missing? If it was intentionally done, why? \n",
     "\n",
-    "In this case, any mising data is likely due to non-particpation. In more recent years, more and more athletes have started to skip certain drills or the combine altogether. It also depends on what variable we are refering to. For example, most of the missing numerical variables in this case are more than likely non=participation related. However, missing 'Round' numbers most likely means that specific player went undrafted. Missing 'position' values are a little harder to interpret. It may be because a player had no official position coming out of the combine and/or they may have played multiple positions in college. A perfect example of this was Travis Hunter in this year's draft because he had played both Cornerback and Wide Receiver in his college career. In this case, we may want to look at how many rows have missing positions. \n",
+    "In this case, any mising data is likely due to non-particpation. In more recent years, more and more attendees have started to skip certain drills or the combine altogether. It also depends on what variable we are refering to. For example, most of the missing numerical variables in this case are more than likely non=participation related. However, missing 'Round' numbers most likely means that specific player went undrafted. Missing 'position' values are a little harder to interpret. It may be because a player had no official position coming out of the combine and/or they may have played multiple positions in college. An example of this was Travis Hunter in the 2025 draft because he had played both Cornerback and Wide Receiver in his college career. In this case, we may want to look at how many rows have missing positions. \n",
     "\n",
     "Before getting to that, let's make it simple and split the data. We will make one dataframe of missing values and the other will have complete records only."
    ]
@@ -2188,7 +2214,7 @@
    "id": "c838224c",
    "metadata": {},
    "source": [
-    "That is a TON of data with missing values. Let's start by examining the rows with any missing position groups."
+    "That is quite a bit of rows with missing values. Let's start by examining the rows with any missing position groups."
    ]
   },
   {
@@ -3156,20 +3182,22 @@
    "id": "4024bccf",
    "metadata": {},
    "source": [
-    "Wow, there are 1,123 players who had no data for the majority of the combine drills! In this case, these are most likely players that skipped out on certain drills in attempt to prevent injury and/or only do drills that may be neccesary for their position. It is difficult to decide what to do with these players.\n",
+    "There are 1,123 players who had no data for the majority of the combine drills! In this case, these are most likely players that skipped out on certain drills in attempt to prevent injury and/or only do drills that may be neccesary for their position. It is difficult to decide what to do with these players.\n",
     "\n",
     "Some of the possible options we could take are: drop all rows with missing data, drop ONLY the rows with majority of their data missing, mark the missing data as a certain value, OR change all of the missing drill values to the mean/median. \n",
     "\n",
-    "Making this decision means we must weigh the pros and cons of each approach for the most faithful representation of the data. You would most likely not want to drop all of rows with missing values in this case because that is the majority of the dataset and causes an obstruction of the truth due to the elimination of a lot of drill values. Dropping players that have not competed in most of the drills could be a good idea but that would mean ignoring the drills that they DID do. On one hand, if you replace all of the data with a certain value such as the mean, it would'nt change the distribution too much. However, on the other hand, it would not be a truly accurate representation because if those players DID particpate in the drill, the outcome may be drastically different. \n",
+    "Making this decision means we must weigh the pros and cons of each approach for the most faithful representation of the data. You would most likely not want to drop all of rows with missing values in this case because that is the majority of the dataset and causes an obstruction of the truth due to the elimination of a lot of drill values. Dropping players that have not competed in most of the drills could be a good idea but that would mean ignoring the drills that they DID do. On one hand, if you replace all of the data with a certain calculated value such as the mean, it would not change the distribution too much. However, on the other hand, it would not be a truly accurate representation because if those players DID particpate in the drill, the outcome may be drastically different.  And it is possible that their choice to not participate in a particular drill was a result of their likely not doing well on this drill. \n",
     "\n",
     "Believe it or not, we may need to do several of these approaches. The best approach may be a somewhat subjective one but let's go with this one:\n",
     "\n",
-    "- To address assumpted undrafted players, we will change the column data type to the object type and enter all missing values as undrafted. \n",
+    "- To address undrafted players, we will change the column data type to the object type and enter all missing values as undrafted. \n",
     "- Players Missing ALL of their drill values will be dropped from the dataset since we only care about players that participated in the draft combine\n",
     "- Any other missing drill value will be assigned to the mean value of that column in order to perserve drill values that were completed.\n",
     "\n",
     "\n",
-    "Ideally, we would not want to replace all of the missing values with the mean because it does not accurately represent those player TRUE drill results. However, in order to perserve an accurate datatype, float, this is most likely to be the best decision. The reason we changed the datatype of 'round' and not the drill value columns is due to the nature of 'round'. The round a player was drafted in is NOT a measurement. It can be viewed as a categorical variable, much like that of a shoe size. 'Round' may be represented by a number but it is read as a category that indicates when a player was drafted."
+    "Ideally, we would not want to replace all of the missing values with the mean because it does not accurately represent those player TRUE drill results. However, in order to perserve an accurate datatype, float, this is most likely to be the best decision. \n",
+    "\n",
+    "The reason we changed the datatype of 'round' and not the drill value columns is due to the nature of 'round'. The round a player was drafted in is a variable known as an ordinal variable since it represents the order of something. "
    ]
   },
   {
@@ -4678,7 +4706,7 @@
    "id": "9a733142",
    "metadata": {},
    "source": [
-    "Looks great! Now we need to enter the rest of the missing values as the mean of their respective columns."
+    "Looks great! Now we need to enter the rest of the missing values as the mean of their respective columns.  Note that we are doing this to illustrate the process of imputation and that the mean is not necessary a good choice any particular player."
    ]
   },
   {
@@ -7567,7 +7595,7 @@
     "# Data Imputation\n",
     "\n",
     "\n",
-    "Data Imputation is an extremely important topic in data cleaning. You may not know what it is yet, but you have actually seen it in this module thus far!"
+    "Data Imputation is an extremely important topic in data analysis. You may not know what it is yet, but you have actually seen it in this module thus far!"
    ]
   },
   {
