Update to Revisions

--- a/Modules/Intro to Data Cleaning and Imputation by Austin Hayes/Intro to Data Cleaning and Imputation by Austin Hayes.ipynb
+++ b/Modules/Intro to Data Cleaning and Imputation by Austin Hayes/Intro to Data Cleaning and Imputation by Austin Hayes.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "source": [
     "M. Schuckers Comments 11 Aug 2025\n",
-    "- I broke the first markdown cell into three separate cells.  Have a look a verify I did okay.\n",
-    "- I've also toned down a bit of the commentary.\n",
-    "- Explain this code 'combine_data[combine_data.isnull().any(axis=1)]' a bit more \n",
-    "- Explain this code 'missing_combine_data[missing_combine_data[['forty','vertical','bench_reps','broad_jump','three_cone','shuttle']].isna().sum(axis=1) >= 4]' a bit more\n",
+    "- I broke the first markdown cell into three separate cells.  Have a look a verify I did okay. _-Looks great!_\n",
+    "- I've also toned down a bit of the commentary. _- Gotcha._\n",
+    "- Explain this code 'combine_data[combine_data.isnull().any(axis=1)]' a bit more _- Done._ \n",
+    "- Explain this code 'missing_combine_data[missing_combine_data[['forty','vertical','bench_reps','broad_jump','three_cone','shuttle']].isna().sum(axis=1) >= 4]' a bit more _-Done._\n",
     "- I must admit this module makes me a bit queasy since we are advocating doing something (imputation with a mean) that I would never do to analyze these data.\n",
     "- Okay now that I see the linear regression part I feel better but we should not that the assumption of MAR is likely not met with these data but we can illustrate the missingness with it."
    ]
@@ -2166,6 +2166,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "020faa91",
+   "metadata": {},
+   "source": [
+    "NOTE: In the below code cell, we use combine_data[combine_data.isnull().any(axis=1)] to make a dataframe that ONLY includes rows with missing values in them. This will allows us to break down missing values in the dataframe a bit better. Now, let's breakdown this code piece a bit. \n",
+    "\n",
+    "- combine_data = the original NFL combine dataframe that we are working with\n",
+    "- [] = filter the dataset with whatever is in between the brackets.\n",
+    "- .isnull() = returns a boolean (TRUE or FALSE) dataframe. TRUE if there is a missing value, FALSE if not. \n",
+    "- .any() = records whether or not there is a TRUE value.\n",
+    "- (axis=1) = This means each column will be checked for every row in the given dataframe.\n",
+    "\n",
+    ".any(axis=1) = With these two together, it is recording every row with a missing value since it will be passed the TRUE value. It checks each row, column by column, for a missing value with the help of .isnull().\n",
+    "\n",
+    "All together, it is filtering out the dataset to ONLY include rows that have AT LEAST 1 missing value in them, no matter the column under which the value is missing. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "3adcafa8",
@@ -2366,6 +2384,24 @@
    "metadata": {},
    "source": [
     "Looks good! Moving on to the numeric variables, let's see if there are any rows missing AT LEAST 4 of their combine drill values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd1c6091",
+   "metadata": {},
+   "source": [
+    "NOTE: To break down the code a little more, here is a list of each of the contributions made by each portion of the code below:\n",
+    "\n",
+    "- missing_combine_data = filtered version of the original dataset that ONLY includes rows that have AT LEAST 1 missing value.\n",
+    "- [] = filters the dataframe\n",
+    "- missing_combine_data[['forty','vertical','bench_reps','broad_jump','three_cone','shuttle']] = Uses double brckets to define a selective list of columns that will be used in the filtering process. ONLY selecting the columns WE want.\n",
+    "- .isna() = Essentially the same as isnull(); returns TRUE if there is a missing value found.\n",
+    "- .sum() = returns the TOTAL count of the number of null values in total from a particular row.\n",
+    "- (axis=1) = like before, allows each row to be searched on a column by column basis.\n",
+    "- _>= 4_ = Logical argument for filtering that means the object on the other side of the > sign MUST be greater than or equal to 4 to be recorded as TRUE.\n",
+    "\n",
+    "All together, the missing_combine_data dataframe is searched ONLY using the defined list of columns and returns rows that have GREATER THAN or EQUAL TO 4 missing values. Any row that has a null value outside of the defined columns in the list will not be counted."
    ]
   },
   {
