Update to Revisions

--- a/Modules/Intro to Data Cleaning and Imputation by Austin Hayes/Intro to Data Cleaning and Imputation by Austin Hayes.ipynb
+++ b/Modules/Intro to Data Cleaning and Imputation by Austin Hayes/Intro to Data Cleaning and Imputation by Austin Hayes.ipynb
@@ -10,7 +10,7 @@
     "- I've also toned down a bit of the commentary. _- Gotcha._\n",
     "- Explain this code 'combine_data[combine_data.isnull().any(axis=1)]' a bit more _- Done._ \n",
     "- Explain this code 'missing_combine_data[missing_combine_data[['forty','vertical','bench_reps','broad_jump','three_cone','shuttle']].isna().sum(axis=1) >= 4]' a bit more _-Done._\n",
-    "- I must admit this module makes me a bit queasy since we are advocating doing something (imputation with a mean) that I would never do to analyze these data.\n",
+    "- I must admit this module makes me a bit queasy since we are advocating doing something (imputation with a mean) that I would never do to analyze these data. _- I Understand; I just did it because of the linear regression portion but it would be good to note that its not neccesarily a great practice for datasets like this.\n",
     "- Okay now that I see the linear regression part I feel better but we should not that the assumption of MAR is likely not met with these data but we can illustrate the missingness with it."
    ]
   },
