update to revisions

--- a/Modules/Intro to Data Cleaning and Imputation by Austin Hayes/Intro to Data Cleaning and Imputation by Austin Hayes.ipynb
+++ b/Modules/Intro to Data Cleaning and Imputation by Austin Hayes/Intro to Data Cleaning and Imputation by Austin Hayes.ipynb
@@ -138,6 +138,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f984f05e",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "# Types of Missingness\n",
+    "\n",
+    "\n",
+    "When dealing with missing data, it is important to acknowledge the types of missingness because they may change what you do with the data. There are 3 types of missing data: Missing Completely at Random (MCAR), Missing at Random (MAR), and Missing Not at Random (MNAR). These types of missingness are explained below:\n",
+    "\n",
+    "- Missing Completely at Random (MCAR): This means that the data is missing for a reason that is unrelated to the study. This means there are no special reasons, that were caused by the canidates, for the missingness; it is completely independent of the study. MCAR missing data is completely independent of the observed data as well as unobserved data. For example, if a study is done on NFL players' heart rates and some of the players heart monitors are defective, that is MCAR. Any study where MCAR is present, is allowed to use the data that was not affected by said reason. In this case, the players who did not have defective heart monitors could stilll have their data examined. MCAR is generally thought to be a strong and oftern unrealistic assumption of why data is missing. There may likely need to be strong evidence of an unrelated occurance that would cause the study to be tampered with. \n",
+    "\n",
+    "- Missing at Random (MAR): The data in MAR is missing due to systematical failures that are related to the observed data/study. However the unobserved data is unrelated, like MCAR. For example, in a study that takes samples from men and women, men may be more likely to report a lower depression score, which is dependent on observed data (sex). This produces bias within the results and this assumption is far more likely than MCAR. If there are known factors, such as sex in this case, it can result in unbiased results. Otherwise it can result in possibily biased or unbiased results, depending on the context. \n",
+    "\n",
+    "- Missing Not at Random (MNAR): This means that the data is missing due to systematically unobserved data. This means MNAR is the EXACT opposite of MAR; the reason of missingness among observed and unobserved values have been swapped. MNAR assumes that the reason for missingness was NOT measured by the study. Going back to the previous example, instead of giving a lower depression score, maybe more males refuse to complete the survey. This means there is missingness in the data due to a lack of data. The study would have missing results, making it hard to tell why certain answers were left out. Using this assumption, it may produce biased or unbiased results. However, it is very likely that the data could be biased since the source(s) of the missing data are unmeasured, making them hard to address."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4f5180c0",
    "metadata": {},
    "source": [
